p2/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
    - name: app1
      protocol: TCP
      port: 80                                                                    
      targetPort: 8080
